[project]
name = "python-chat-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.3.0",
    "timm>=1.0.28",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
